add style to pages.

--- a/views/anagram_result.erb
+++ b/views/anagram_result.erb
@@ -1,4 +1,7 @@
-<h1>Arbadacarba Mazakala</h1>
-<p>
-  <%= @anagram_result %>
-</p>
+<div class="jumbotron">
+  <h2 class="well" id="title">Arbadacarba Mazakala!</h2>
+  <br>
+  <h4 class="well" id="result">
+    <%= @anagram_result %>
+  </h4>
+</div>
