--- a/views/palindrome_result.erb
+++ b/views/palindrome_result.erb
@@ -1,4 +1,7 @@
-<h1>Top spot!</h1>
-<p>
-  <%= @palindrome_result %>
-</p>
+<div class="jumbotron">
+  <h2 class="well">“Do geese see God?”</h2>
+  <br>
+  <h4 class="well" id="result">
+    <%= @palindrome_result %>
+  </h4>
+</div>
