--- a/views/index.erb
+++ b/views/index.erb
@@ -1,21 +1,25 @@
-<h1>Anagram, Antigram or Neither?</h1>
-<h3>Enter two words to compare them and find out if they are either an anagram, antigram or neither.</h3>
-<form class="" action="/anagram_result" method="get">
-  <div class="form-group">
-    <label for="word1">Enter the first word:</label>
-    <input id="word1" name="word1" class="form-control" type="text">
-    <label for="word2">Enter the second word:</label>
-    <input id="word2" name="word2" class="form-control" type="text">
-  </div>
-  <button type="submit" class="btn btn-info">Compare!</button>
-</form>
+<h1 class="jumbotron" id="titles">Anagram, Antigram or Neither?</h1>
+<div class="well" id="anagram-form">
+  <p>Enter two words to compare them and find out if they are either an anagram, antigram or neither.</p>
+  <form class="" action="/anagram_result" method="get">
+    <div class="form-group">
+      <label for="word1">Enter the first word:</label>
+      <input id="word1" name="word1" class="form-control" type="text" required>
+      <label for="word2">Enter the second word:</label>
+      <input id="word2" name="word2" class="form-control" type="text" required>
+    </div>
+    <button type="submit" class="btn btn-info">Compare!</button>
+  </form>
+</div>
 <br>
-<h1>Is this a palindrome?</h1>
-<h3>A palindrome is a word or phrase that is spelled the same forwards and backwards. Enter a word or phrase below to check if it is a palindrome!</h3>
-<form class="" action="/palindrome_result" method="get">
-  <div class="form-group">
-    <label for="palindrome_word">Enter a word:</label>
-    <input id="palindrome_word" name="palindrome_word" class="form-control" type="text">
-  </div>
-  <button type="submit" class="btn btn-success">Check!</button>
-</form>
+<h1 class="jumbotron" id="titles">Is this a palindrome?</h1>
+<div class="well" id="palindrome-form">
+  <p>A palindrome is a word or phrase that is spelled the same forwards and backwards. Enter a word or phrase below to check if it is a palindrome!</p>
+  <form class="" action="/palindrome_result" method="get">
+    <div class="form-group">
+      <label for="palindrome_word">Enter a word:</label>
+      <input id="palindrome_word" name="palindrome_word" class="form-control" type="text" required>
+    </div>
+    <button type="submit" class="btn" id="palindrome-btn">Check!</button>
+  </form>
+</div>
