--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Anagram or Antigram?</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel='stylesheet' href="css/styles.css" type="text/css">
   </head>
   <body>
     <div class="container">
